--- a/frontend/views/index.html
+++ b/frontend/views/index.html
@@ -9,30 +9,35 @@
     rel="stylesheet"
   />
 </head>
+
 <body class="bg-light">
+  <div class="d-flex justify-content-end mb-3">
+  <button class="btn btn-success" onclick="crearRecepcion()">Agregar recepción</button>
+</div>
+  <div class="container mt-5">
+  <div class="d-flex justify-content-center">
+<table class="table table-bordered table-hover">
+  <thead class="table-dark">
+    <tr>
+      <th scope="col">ID</th>
+      <th scope="col">Cliente</th>
+      <th scope="col">Equipo</th>
+      <th scope="col">Estado</th>
+      <th scope="col">Falla</th>
+      <th scope="col">Ingreso</th>
+      <th scope="col">Acciones</th>
+    </tr>
+  </thead>
+  <tbody id="recepciones-body">
+    <!-- Aquí se insertan las filas dinámicamente -->
+  </tbody>
+</table>
 
-  <div class="container py-5">
-    <h1 class="text-center mb-4">Bienvenido a APP-TALLER</h1>
-
-    <div class="row justify-content-center">
-      <div class="col-md-4 mb-3">
-        <button id="btnEquipos" class="btn btn-primary w-100">
-          Módulo de Equipos
-        </button>
-      </div>
-      <div class="col-md-4 mb-3">
-        <button id="btnClientes" class="btn btn-success w-100">
-          Módulo de Clientes
-        </button>
-      </div>
-      <div class="col-md-4 mb-3">
-        <button id="btnRecepciones" class="btn btn-warning w-100">
-          Módulo de Recepciones
-        </button>
-      </div>
-    </div>
-  </div>
+</div>
+</div>
 
   <script src="../scripts/index.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
+
