--- a/frontend/views/addReceptionForm.html
+++ b/frontend/views/addReceptionForm.html
@@ -3,12 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>APP-TALLER</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <title>Crear Recepcion</title>
 </head>
-<body>
+<body class= "bg-light">
+    <div class="d-flex justify-content-start ms-3 mt-3">
+        <button class="btn btn-warning" onclick="regresar()">REGRESAR</button>
 
+    </div>
+    <h1 class="text-center">MODULO PARA AGREGAR RECEPCIONES</h1>
+  <div class="container">
+    <div class="justify-content-center">
+    <form id="reception-form">
+  <h5 class="mt-3">Datos del cliente</h5>
+  <div class="mb-3">
+    <label for="client_idNumber" class="form-label">Cédula</label>
+    <input type="text" class="form-control" id="client_idNumber" required />
+  </div>
+  <div class="mb-3">
+    <label for="client_name" class="form-label">Nombre</label>
+    <input type="text" class="form-control" id="client_name" required />
+  </div>
+  <div class="mb-3">
+    <label for="client_phone" class="form-label">Teléfono</label>
+    <input type="text" class="form-control" id="client_phone" required />
+  </div>
+
+  <h5 class="mt-4">Datos del equipo</h5>
+  <div class="mb-3">
+    <label for="device_description" class="form-label">Descripción</label>
+    <input type="text" class="form-control" id="device_description" required />
+  </div>
+  <div class="mb-3">
+    <label for="device_features" class="form-label">Características</label>
+    <input type="text" class="form-control" id="device_features" />
+  </div>
+
+  <h5 class="mt-4">Recepción</h5>
+  <div class="mb-3">
+    <label for="defect" class="form-label">Falla reportada</label>
+    <input type="text" class="form-control" id="defect" required />
+  </div>
+  <div class="mb-3"> <!--CAMBIAR A SELECCION DE ESTOS-->
+    <label for="status" class="form-label">Estado</label>
+    <input type="text" class="form-control" id="status" value="En espera" />
+  </div>
+  <div class="mb-3">
+    <label for="repair" class="form-label">Diagnóstico</label>
+    <input type="text" class="form-control" id="repair" />
+  </div>
+
+  <button type="submit" class="btn btn-success">Guardar recepción</button>
+</form>
+</div>
+</div>
+<div id="mensaje" class="mt-3"></div>
+
+
+<script src="../scripts/reception.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
-
 </html>
