--- a/frontend/views/addReceptionForm.html
+++ b/frontend/views/addReceptionForm.html
@@ -11,7 +11,7 @@
     <button class="btn btn-warning" onclick="regresar()">REGRESAR</button>
   </div>
 
-  <h1 class="text-center">MÓDULO PARA AGREGAR RECEPCIONES</h1>
+  <h1 class="text-center" id="page-title">MÓDULO PARA AGREGAR RECEPCIONES</h1>
 
   <div class="container">
     <div class="justify-content-center">
