--- a/frontend/views/index.html
+++ b/frontend/views/index.html
@@ -90,6 +90,7 @@
         <div class="modal-body" id="modal-body-content"></div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+          <button id="modal-gen-report" type="button" class="btn btn-primary">Generar reporte</button>
           <button id="modal-edit-btn" type="button" class="btn btn-warning">Editar</button>
         </div>
       </div>
